--- a/games/Street-Fighter/Six/theory/リソースの管理.md
+++ b/games/Street-Fighter/Six/theory/リソースの管理.md
@@ -18,6 +18,13 @@
 
 リーサルとは別に、インパクトを返せない体力500以下にしたり、投げで終わる体力1200〜1500以下にしたりするのも大事。
 
+- 1200: 投げで勝ち
+- 500: インパクトを返せない
+- 0: 勝ち
+
+投げで死ぬ体力になると相手の投げを捨てられないので、どうしても崩されやすくなる。あえて投げでなくシミーを狙うのがコツ。
+自分としてもまず投げで殺せる体力まで持っていくのは大事。当たった後の状況がいいならリーサル以外でSAを使うのもいい。
+
 ## 体力ゲージの目盛り
 
 ドライブゲージ6本目の左端がだいたい40%で、体力10000のキャラはクラシックSA3単発で落ちる。
