--- a/shared/communication/channels/sex/恋.md
+++ b/shared/communication/channels/sex/恋.md
@@ -1,3 +1,5 @@
+# 恋
+
 恋は下心。
 
 恋はセックスの過程。
@@ -41,3 +43,12 @@ romance に集約してもいいかも。
 恋は冷める。
 3年くらいしか持たないと言われている。
 長く付き合うなら、親愛の情に切り替えていかないといけない。
+
+恋はセックスして子供を作るための機能であって、それ以上でも以下でもない。それ以外のことを恋のせいにしてはならない。
+
+恋は子孫を残すための異常状態。
+
+脳の状態の一つ。
+
+通常、恋愛は愛というよりもビジネス。
+自分に手が届く範囲でお買い得商品を見つけるのだ。
