--- a/shared/communication/tips/洗脳.md
+++ b/shared/communication/tips/洗脳.md
@@ -11,3 +11,5 @@
 教師の前で生徒に音読させたりするのは、相手が楽しくなくてもとりあえず詰め込む方法。
 
 ただ、社会の治安維持のために必要な部分は仕方ないところがある。
+
+堀江さんが「教育は洗脳である」と言ったらしいけど、そもそもコミュニケーションが洗脳なのだ。教育だけではない。
