--- a/shared/cooking/食品の安全性.md
+++ b/shared/cooking/食品の安全性.md
@@ -2,3 +2,6 @@
 https://youtube.com/watch?v=VkXY0A6xxCw&si=z7cEGDIouscu1kdI
 
 日本の夏は高温多湿なので、粉のプロテインも冷蔵庫に入れたほうが安全ではある。
+
+添加物の危険性を評価する場合、「食塩より危険かどうか」「食塩の致死量と比べてどうか」が一つの基準になる。
+例えばハムなどに添加する「発色剤」はハムを66kg食べると致死量で、食塩はハムを1.3kg食べると致死量。https://x.com/YamabukiOrca/status/1962772326707273751
