--- a/shared/game/genres/fighting/格闘ゲーム.md
+++ b/shared/game/genres/fighting/格闘ゲーム.md
@@ -33,3 +33,5 @@ https://x.com/fuesou/status/1806068277841715655
 格ゲーが上達するかどうかは、対戦と同じくらいトレモを楽しめるかどうかだ。トレモしないとコンボが上手くならないし、判断が早くならない。
 
 格闘ゲームはFPSよりも同じ状況がまたあるということが多いので、リプレイを確認したり座学したりするのが身になりやすい。
+
+「席は立たずして中段は立つ」（常闇トワ）
