--- a/shared/war/敵.md
+++ b/shared/war/敵.md
@@ -29,3 +29,8 @@ Lose-Winの関係をLose-Loseに引きずり込む。
 敵を放置して事態が良くなることはない。
 
 全員を味方にすることはできないので、誰を敵に回すか考えておかないといけない。誰を切り捨てるか、でもある。
+
+「誰かが損しても自分が得するわけではない」と言う人もいるけど、敵であれば話は別。敵が損するということは、自分を害する余裕が減るということ。
+逆にいうと、誰かの損を願っている人はその誰かのことを敵だと思っているということ。
+
+自分のことを敵だと思っている人は、こちらも敵だと思って対処しないといけない。さっさと殺すのが一番。何も対処しないのはぬるい。
