--- a/study/economics/money/通貨.md
+++ b/study/economics/money/通貨.md
@@ -10,3 +10,5 @@
 通貨があることで、数多くの人の需要を考えずに報酬や対価を支払える。
 通貨がないと一人一人の需要に合わせてお返しをしないといけない。米が好きな人もいるし、パンが好きな人もいる。
 逆に、通貨はそのように個人を識別する必要性をなくすということでもある。通貨を介することで相手を尊重する必要性もなくなってしまう。
+
+金本位制だとどんな方法を使っても金所有量までしか通貨の流通を増やせない。逆に、価値が落ちにくいのが利点。
