--- a/shared/collaboration/organization/組織.md
+++ b/shared/collaboration/organization/組織.md
@@ -174,3 +174,6 @@ https://diamond.jp/articles/-/49655
 エンゲージメントが高い人と低い人は組織の中で分離しないといけない。人間は低きに流れる。能力はそうそう落ちないけど、エンゲージメントは簡単に落ちる。
 
 組織行動の最小単位はツーマンセル。小さなチームを作って動く。誰か一人でも単独で動くのは組織的とは言えない。
+
+組織の核は分業。
+活動をいくつかの器官に分担する。
