--- a/shared/society/品性.md
+++ b/shared/society/品性.md
@@ -12,5 +12,9 @@
 ケアやリスペクトが基礎にある。
 
 > 「島田、お前は下品たい。吐き気がする。でも、正しい。」
-> 「安全なところからキレイないことばっか言いよるほうが、ずっと下品じゃなかですかね。」
+> 「安全なところからキレイなことばっか言いよるほうが、ずっと下品じゃなかですかね。」
 > （『あさひなぐ』）
+
+品性の基礎は己を律すること。
+
+品性があるとそれだけで一目置かれる。ただ、品性があっても知性がないとすぐ化けの皮が剥がれる。
