--- a/shared/voice/training/tips/声を育てる.md
+++ b/shared/voice/training/tips/声を育てる.md
@@ -43,3 +43,5 @@
 昭和は平凡な曲に天才の声だったけど、令和は平凡な声に天才の曲という印象。
 
 自分という楽器がリコーダーだったらまだいいけど、カスタネットやトライアングルだったらまず楽器を替えないとできることが少なすぎる。
+
+キーを下げすぎたり裏声ばかりで歌ったりしても声は良くならない。しっかり強い呼気と張力で歌う練習が良い声を育てる。ただ、声帯が硬くなるのは良くない。
