--- a/shared/collaboration/organization/分業の限界.md
+++ b/shared/collaboration/organization/分業の限界.md
@@ -1,2 +1,6 @@
 分業しすぎると個人が責任を持つ範囲が狭くなって、ボトムアップでリスクを取れなくなる。
 そして、なんでもトップダウンで処理していると遅くなる。意思決定がボトルネックになる。
+
+分業が進むほど個々の仕事は楽になって、全体としては非効率的になる。
+
+人が多くなるほど分業を進められる。あるいは人が十分にいないと分業を進められないというべきか。
