--- a/shared/health/衛生.md
+++ b/shared/health/衛生.md
@@ -1,2 +1,4 @@
 硬貨や紙幣は物理的に汚い。多くの人が触るものなので、触った後は手を洗おう。
 他にも公共の場に出た時は、できるだけものに触らないとか、帰ったら手を洗うとか、どこかに触ったら自分の体に触らないとか、注意しておかないと感染しやすい。
+
+風呂に入ったらわざわざ水ごりする意味はない。
