--- a/games/Street-Fighter/Six/characters/Sagat/サガットの相性.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの相性.md
@@ -19,6 +19,8 @@ OD上弾を重ねるとODスクトゥムも割れる。
 
 HPやMPに対して2MPやLKが差し返しやすい。
 
+JPに離されたらとりあえずOD弾使ってからパリィで回復でもいい。コマ投げとの読み合いにする。
+
 ## キンバリー
 
 キンバリーの6HKはガードでいい。
