--- a/shared/music/vocal/training/tips/歌を真似る.md
+++ b/shared/music/vocal/training/tips/歌を真似る.md
@@ -1,3 +1,7 @@
 音程、音量、音色は基本で、ブレスの位置、伸ばし方、ビブラートやしゃくり、フォール、がなり、とか。歌詞のアレンジの仕方、
 
 真似に慣れすぎると作った声になってしまって、喉を壊すこともある。
+
+MrsやVaundyは歌い方が独特なのでちゃんと歌詞カード作った方がいい。
+
+ONE OK ROCKやNovelbrightみたいな息も張力も強い歌い方は維持するのが難しい。まず鍛えないといけない。
