--- a/shared/finance/株式.md
+++ b/shared/finance/株式.md
@@ -14,3 +14,7 @@
 （靴磨きの少年の法則）
 
 NISAはもうダメみたい。結局、自公の作った政策に長期間依存するのは間違い。後でひっくり返される。
+
+株式は会社を一部所有している。債権ではない。
+
+配当金がその会社から生み出される稼ぎの分配。売却益を狙って一時的に持つこともある。
