--- a/shared/finance/資産.md
+++ b/shared/finance/資産.md
@@ -96,3 +96,18 @@
 長期的な投資だとか、事業だとか。時間がかかる。
 
 買ったのと同じ値段で売れる商品は実質タダ。
+
+資産は貸したり何か作らせたりして動かさないと金を稼いでくれない。
+畑とかは金というより収穫物で得られる。
+
+一時的な売却益ではなく、継続的な収入を生み出すのが資産。
+
+- 債権（貸付金）
+- 住宅
+- 土地
+- 道具
+- 会社、株式
+
+人、物、金、情報、みたいな並べ方をするバカもいるけど、情報は資産ではない。
+
+基本的に、自分は資産に含めない。資本ではあるけど不労所得ではない。
