--- a/shared/job/hiring/労働.md
+++ b/shared/job/hiring/労働.md
@@ -35,3 +35,8 @@
 労働以外の方法で量を増やせるかどうか。
 
 週5で働かないといけないのは法規制されてないせい。
+
+労働の前に、収入を得るという考え方がある。
+
+生活のために仕方なく行うのが労働。
+会社に雇われていても生活に余裕があったら必要なだけ働いても別にいい。なんなら辞めたっていい。
