--- a/shared/finance/収入.md
+++ b/shared/finance/収入.md
@@ -30,7 +30,17 @@
 
 借入も収入ではあるけど、返さないといけない。
 
-収入を増やすのはビジネスというよりもファイナンスの話。
+収入を得るのはビジネスというよりもファイナンスの領域。
 
 収入を得るのは生活のため。まず生活ができないと、活動を続けられない。
 生活ができて初めて、ビジネスや趣味に金を回せる。
+
+一時的な収入と継続的な収入であれば、後者の方が多く手に入ることが多い。ただ、額が大きかったら一時的でもいい。
+
+- 財を売る
+- サービスの対価を得る
+- 親族などから小遣いをもらう
+- 支援者から寄付してもらう
+- 先行投資として融資してもらう
+- 借金する
+- 株式を発行して会社の一部を買ってもらう
