--- a/shared/study/teaching/学校.md
+++ b/shared/study/teaching/学校.md
@@ -1,1 +1,7 @@
 いじめへの介入は先生が信頼されてないと逆効果になることもある。過度なものは素直に通報するしかない。
+
+正直、高校数学や高校化学なんかは難しいことを教えすぎだと思う。
+数学と科学の基本的な考え方や研究の進め方にもっと時間を使ったほうがいいと思う。特に数学は証明に使う時間があまりない。
+
+ほとんどの人には高校レベルの数学や化学、歴史が必要ないのは事実。
+「勉強しないとその分野の仕事ができない」とはいうけど、別に大学でもいいと思う。
