--- a/shared/wealth/社会福祉.md
+++ b/shared/wealth/社会福祉.md
@@ -1,3 +1,6 @@
 働けなくなっても、生きるだけなら生活保護か刑務所でなんとかなる。
 
 障害や生活保護に「働け」と言っていいのは「うちで働け」と言える人だけ。それ以外は責任感のないクズなのでその言葉に価値はない。
+
+国は、愛されない人ほど生かさないといけない。
+そもそも愛される人は放っておいても生き残りやすい。わざわざ国が生かす必要もない。そこから漏れた人を助けるのが国の仕事。経済や発展を支えるのはとにかく人口。
