--- a/games/shogi/将棋の戦法.md
+++ b/games/shogi/将棋の戦法.md
@@ -1,19 +1,40 @@
 # 将棋の戦法
 
-代表的なもの
+## 飛車の位置による区分
+
+- 居飛車
+- 袖飛車
+- 右四間飛車
+- 振り飛車
+  - 三間飛車
+  - 四間飛車
+
+## 囲いによる区分
 
 - 矢倉
+- 雁木
+- 穴熊
+
+## 相居飛車の区分
+
 - 角換わり
 - 相掛かり
 - 横歩取り
-- 振り飛車
-- 持久戦、穴熊
+
+## 進行による区分
+
+- 持久戦
+- 力戦
 - 急戦
-- 奇襲
+
+## メモ
 
 お互いに最善手が研究されていてそれ以外に指しようがない手順は定跡になっている。
 
 穴熊は飛車角と小駒だけで攻めないといけなくなるので意外と難しい。
+
+将棋の戦法を知っていると、序盤の局面を戦法でざっくり区分して見ることができる。
+「これは先手の早繰り銀を後手が雁木で受けているんだな」みたいな。
 
 ## Reference
 
