--- a/games/shogi/寄せ.md
+++ b/games/shogi/寄せ.md
@@ -2,3 +2,6 @@
 玉の逃げ場があったら近くに指しても意味がない。
 
 終盤に必要な駒は寄せる駒だけ。寄せるのに使えない駒は大駒でも捨てて、寄せるのに使える駒と交換しなければならない。
+
+囲いの強さのパラメータとして、一瞬王手がかけにくいのを「遠い」、逃げ道が多いのを「広い」という。
+穴熊は遠くて狭い。逆に玉を上がるだけの中住まいなんかは広い。
