--- a/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
@@ -193,10 +193,12 @@ HK(1), 強ノヴァは相手が空中でも使える。
 - 2MP(pc)-HP, ODノヴァ, 6HK, SA1: 3500
 - 2MP(pc)-HK, SA2: 4120 (2:3880)
 - 2MP(pc)-HP, ODノヴァ, 6HK, SA2: 3930
+- {端} 2MP(pc)-HP, ODノヴァ, 4HP, 強ニー, SA2: 4140
 - 2MP(pc)-HP, CR 6HK, HK(1), 強ノヴァ, 6HK, SA2: 4185
 - 2MP(pc)-HP, 強アッパー, SA3: 5000
-- {端} 2MP(pc)-HP, ODノヴァ, 4HP, 強アッパー-h, SA3: 5300
+- {端} 2MP(pc)-HP, ODノヴァ, 4HP, 強ニー, 中アッパー, SA3: 5360
 - 2MP(pc)-HP, CR MP, 4HP, 強ニー, 弱アッパー, SA3: 5325
+- {端} 2MP(pc)-HP, ODノヴァ, ODニー, 弱アッパー, SA3: 5410
 
 ## 2HP
 
