--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
@@ -237,6 +237,10 @@ MP(+3)ルートが強い。シミーも狙える。投げは目押しで。
   - 2MP: +8
     - MP(+3)
     - 後退: シミー
+  - 2MK: +5
+    - MP
+    - 前投げ
+    - バクステ, {通常投げ}, 2MP-HP(pc): シミー
   - 2LK, 2LP: +2
   - 2LP, 中ショット(+4): ヒットでもガードでも+7
     - MP: 連続ガード
