--- a/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
@@ -102,6 +102,23 @@
 
 ## 中級
 
+### 端の投げループ
+
+- {端} 前投げ, DR 前投げ, ...
+
+### 端のMP持続当てループ
+
+- {端} DR MP(h), 4HP, 強ニー, 弱アッパー(+2)
+  - MP(+3)(h), 4HP, 強ニー, 弱アッパー(+2)
+    - 2MP, MP(+3), ...
+  - MP(+3)(g)
+    - MP, 2MP, 中グリード(h), 弱アッパー(+1)
+      - 2MP, MP(+2), ...
+    - MP, 2MP, 中グリード(g), 前投げ
+      - DR MP, ...
+- {端} DR MP(g); 前投げ
+  - DR MP, ...
+
 ### 飛び道具と対空
 
 （ダミー設定 > ガード: すべてガード）
