--- a/shared/collaboration/organization/hierarchy/上司の仕事.md
+++ b/shared/collaboration/organization/hierarchy/上司の仕事.md
@@ -92,3 +92,5 @@
 自分でメンタルケアできない部下は要らないから前線で使い潰した方がいいけど、世間体が悪い。できれば初めから採用しない方がいい。とはいえ技能の一種として考えると他の技能も含めてどこまで許容するかは上司次第。
 
 上司にも得意不得意があるので、メンタルケアが強い上司にはメンタルがカスの部下をつけるとか、適性に合わせないといけない。
+
+上司に必要なのは部下のエンゲージメントを高めること。それだけ。ただ、部下によってはエンゲージメントのために知性や教養、技術、実績などを求めることはある。
