--- a/shared/family/children/育児.md
+++ b/shared/family/children/育児.md
@@ -71,3 +71,6 @@ https://toyokeizai.net/articles/-/624086?page=2
 子育てはまず子供を優先する余裕の有無で方法も違う。子供を優先する余裕があるなら、楽しんでいることや続けていることはとことん続けさせて、親はそれを待ったほうがいい。集中力はあらゆる活動の基礎になる。
 
 児童養護施設に必要なのは衣食住と教育だけなのかも。親はいらない。
+
+育児の大変さのアンケートでは、子どもが生まれた直後と2歳ごろが一番大変で、4歳になると楽になる、という傾向が出ている。
+https://x.com/shiroku__mama/status/1963543241292136671?s=12
