--- a/shared/government/legal/法律.md
+++ b/shared/government/legal/法律.md
@@ -28,3 +28,5 @@
 裁判では証拠と動機のセットが基本。
 動機があっても証拠がなければやってないし、証拠があっても動機がなければやる必要がない。
 むしろ証拠があっても動機がないのは証拠を偽造された可能性が高い。
+
+行政がサービスを提供できないなら、代わりに国民がサービスを提供するのを違法にするべきではない。
