--- a/shared/management/performance/準備.md
+++ b/shared/management/performance/準備.md
@@ -17,3 +17,9 @@
 
 機会に備えるためには、機会の兆しを見落とさないようにしないといけない。
 悪い機会と出会わないようにするのも同じ。例えば、退職しそうな人がいたら回避できないか考える。
+
+「最善を望み、最悪に備えよ」
+"Hope for the best, but prepare for the worst."
+（イギリスのことわざ）
+
+「準備を怠るのは、失敗する準備をしている。」
