--- a/games/Street-Fighter/Six/characters/Marisa/マリーザの対策.md
+++ b/games/Street-Fighter/Six/characters/Marisa/マリーザの対策.md
@@ -50,3 +50,5 @@ https://youtu.be/bFTTlhxbMDc?si=ARTSmR4fnFeFRBZ0
 ファランクスは咎めにくいけど、咎めてくる相手ならジャンプ攻撃の方がまだいい。ファランクスは当ててもあまり痛くない。
 
 2hit技を重ねるとスクトゥムを咎められる。
+
+マリーザ戦はとにかく投げを中心に攻める。投げにいけない場合は下段が次点。
