--- a/games/Street-Fighter/Six/theory/守りの基本.md
+++ b/games/Street-Fighter/Six/theory/守りの基本.md
@@ -184,3 +184,5 @@ DIを拒否するなら、ジャンプより投げ。もちろん割り込めな
 無理してパリィしなくていい。
 
 相手がコパン中足みたいな不利な連携をしてきた場合にこちらも中パンなどそこそこ発生の早い技を押しているのにカウンターで負けた場合、コパンをガードしてから最速で押せてない。単に反応できてない場合もあるし、ガード硬直が切れるタイミングを捉えられてない場合もあるし、ラグの場合もある。
+
+打撃とコマ投げの択には正面からぶつからないといけない。安易に安い無敵技で暴れるのは良くない。リスクリターンを合わせる。打撃に暴れるならSAで、投げには垂直を合わせる。リターンで負けない。
