--- a/games/Street-Fighter/Six/characters/Jamie/ジェイミーの対策.md
+++ b/games/Street-Fighter/Six/characters/Jamie/ジェイミーの対策.md
@@ -1,9 +1,15 @@
-三連続でパンチしてくるDR 5HPはガードして+1なので、コパンで暴れたらいい。
+## 立ち回り
+
+ジェイミーは初手ぶっぱしがちなので、最初の攻めは後退から入るといい。
+
+ジェイミーは一飲みを最初に狙ってくるので、攻めの投げや絶唱、守りの昇竜暴れが多い。
+
+ジェイミー戦の序盤は酒を咎めやすいようにその場受け身も多めにする。
+
+## メモ
+
+三連続でパンチしてくるDR 5HPはガードして離れて+1なので、コパンで暴れてもいい。
 相手が無敵技で暴れてくるようなら下がってもいいし。
 
 差し合いの中で無理やり大足で転ばせてくる。
 ガードした時点で派生しても連続ガードなので、すぐに反撃していい。11F以内。
-
-ジェイミーは一飲みを最初に狙ってくるので、攻めの投げや絶唱、守りの昇竜暴れが多い。
-
-ジェイミー戦はその場受け身にする。
