--- a/games/Street-Fighter/Six/characters/Sagat/サガットの対策.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの対策.md
@@ -7,3 +7,7 @@
 
 連携の締めにニーを混ぜてくる場合は立ちガードから確反を狙う。OD以外がめり込んだら5F以上はある。
 当たり方で下りで当たったか上りで当たったか判別できるようにするのも大事。
+
+## ショット
+
+サガット戦は近距離の強ショットに大足でお仕置きするのが大事。
