--- a/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
@@ -158,6 +158,10 @@ SA1は発生が遅いので、相殺を狙っても負けがち。
 
 サガットは2MPや2HPの判定が強くて遅いので、割り込みポイントは他のキャラよりも離れたところ。変なところで攻め継続してくる相手はジャンプや無敵技で暴れる。
 
+サガットは中足で攻めを切れないので、後退読みで切り返すならコアコパ。まぁ、中パンネクサスとか、ニーで切り返す手もある。
+
+サガットは端を背負ってもわりと押し返しやすい。ダルシムと違って、無敵技もあるし。ガードから切り返し狙いを多めにする。
+
 ## メモ
 
 かずのこはステローとニーをめっちゃ使ってる。あと密着はMPMP2MP弱ショットとかできっちり離す。当たってたらMPLPアパカ。
@@ -170,3 +174,5 @@ SA1は発生が遅いので、相殺を狙っても負けがち。
 ジャストパリィからでもHK(pc)から強アッパー-hで1700減る。
 
 サガットの立ち回りはプロもみんなステローが強くて弾が弱いって言ってる。特に弱ショットは弱すぎる。
+
+サガットは小技で2MPが届かなくなるくらいまで離せるともっと楽だったんだけど。
