--- a/games/Street-Fighter/Six/theory/端の守り.md
+++ b/games/Street-Fighter/Six/theory/端の守り.md
@@ -71,3 +71,7 @@
 端にガードしているだけでは結構崩される。ファジー行動も細かく仕込んだり、逆択も狙うといい。
 
 昇竜を持っている場合、一歩だけでも端から離れておくとめくり気味の前飛びにも昇竜を出しやすい。相手が近かったら裏に入力する。
+
+端を背負うとガードしてても離れにくいし、起き攻めの状況も良くなりやすいので、ちゃんと相手の攻めを切りにいかないといけない。崩されやすくもなるけど仕方ない。
+
+端で投げ抜けしても攻めが完全に切れるわけではないので、できるだけしたくないけど、柔道なんかでしないといけなくなることもある。できれば無敵技の方がマシ。あとシミーを見越して小足や中足とか。
