--- a/shared/government/military/軍事.md
+++ b/shared/government/military/軍事.md
@@ -5,3 +5,5 @@
 軍は大きくなるものだが、生産性がない金食い虫だ。しかし、弱くなっても困る。
 
 軍は兵士が死んで減ることを前提に作られている場合があるので、戦争がしばらくないと増えすぎることがある。
+
+兵は死兵でなければならない。国よりも命を守る兵は役に立たない。志願兵しか役に立たない。
