--- a/shared/life/死.md
+++ b/shared/life/死.md
@@ -35,3 +35,5 @@ https://x.com/badassceo/status/1111934061788852224
 どうせそのうち死ぬのに「死にたい」と考えるのは無駄でしかない。
 
 「死にたい」は「死にそう」の錯誤でしかない。
+
+「人はなぜ死ななければならないと思う？」『亜人』
