--- a/shared/discussion/tips/批判.md
+++ b/shared/discussion/tips/批判.md
@@ -76,3 +76,7 @@
 
 相手を批判する時は、あくまでも議論として行う。
 自分の意見が間違っている場合もあることを意識する。
+
+批判するならどう改善するかも伝えるべき。まぁ、その前にそもそも感想を言っていいか聞いた方がいい。
+
+本人の耳に入らない陰口なら別に言ってもいいけど、聞かせた人から信頼されなくなる場合がある。それでもいいなら自由。
