--- a/study/politics/conflict/逃走.md
+++ b/study/politics/conflict/逃走.md
@@ -9,3 +9,5 @@
 逆に、情報を持ち帰らないといけないなら逃げなければならない。逃げないのが恥。
 
 死が迫っている状況で逃げられるのに逃げないのは、生きることから逃げている。
+
+今の環境でうまくいってなかったら別の環境に移るのは一つの手。人間が最強生物なのは機動力が理由の一つ。
