--- a/study/politics/正義.md
+++ b/study/politics/正義.md
@@ -29,3 +29,5 @@
 最後まで戦えば、殺されても尊厳は守られる。正義を示し、凌辱を許さない。
 
 正義は暴力を止めるための暴力であって、権力になってはいけない。正義に権力を与えることには正義がない。正義を持たない人たちが誰かの正義に丸投げして権力を与える。
+
+「いいですか、スカーレット様。人を殴る時はこういったグローブを着けて、自分が傷付かずに気持ちよく豚野郎をブン殴れるようにしなければなりません。」『最後にひとつだけお願いしてもよろしいでしょうか』
