--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
@@ -285,6 +285,7 @@ MP(+3)ルートが強い。シミーも狙える。投げは目押しで。
   - DR 6MP: 5F遅れ
   - ステップ: +4
   - 2LK: +8
+    - MP(+3)
     - 後退: シミー
   - 中ニー: ガードされても+3で投げ間合いの外
 
@@ -359,6 +360,11 @@ DIがギリギリ届かない。
 
 ## ODアッパー: 25
 
+- DR 6LK
+  - {後方受け身, ガード}
+    - 2LP, 弱ショット: -7で大足の外
+    - 2LP, 中ネクサス: 小技暴れに差し返し気味に当たる、LPまで
+    - 2LP, 強ネクサス: 小技暴れに差し返し気味に当たる、LKまで
 - {端} ステップ: +2
 - {端} 強ネクサス
 
@@ -485,6 +491,16 @@ DIがギリギリ届かない。
 弱/中ネクサスからはノヴァが繋がらないが、無敵技以外で割り込めないのでダブルアップを狙うのもあり。ガードされても後退がシミーになる投げ間合いで+2だし。
 
 ネクサスがカウンターヒットすると吹き飛んでノヴァが入るので、できるだけ溜めて派生技を選択する。
+
+弱/中ネクサス-ノヴァは繋がらないけど、無敵技以外で割り込めないし、ガードさせて+2の投げ間合いだし、インパクトは返せる。
+
+## 弱/中ネクサス(h): 2
+
+投げ間合い。
+
+- 前投げ
+- 後退: シミー
+- ノヴァ: 無敵技以外で割り込めない、インパクトは返せる
 
 ## 弱/中ネクサス(g): -5
 
