--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの選択肢.md
@@ -148,12 +148,19 @@ MP, MPに無敵技以外で割り込めない。
 
 - DR 6LK(h), 2MP
 - DR 6LK(g): +1で後退がシミーになる投げ間合い
-  - 2LP, LP, 弱ショット: -7で大足の外、無敵技以外で割り込めない、ヒットしたら中アッパーにしたい
-  - 2LP, LP, 弱ネクサス: 7F遅れ、短い技を潰してパニカン
-    - マイト: ヒットしても投げ間合いの外
-  - 2LP 2回
-    - {ヒット}, 中アッパー(+1)
-    - {ガード}, 2MP: 短い技を外から潰す、8F遅れ
+  - 2LP(g), LP: 距離を取る選択肢、ヒットしたら中アッパーでコンボ
+    - **弱ショット**: -7で大足の外、無敵技以外で割り込めない、ヒットしたら中アッパーにしたい
+    - 中ショット: しゃがみに当たらない、インパクトを返せる
+    - OD下ショット: -1で大足の外、インパクトを返せる
+    - **弱ネクサス**: 7F遅れ、短い技や遅い技を潰して当たる
+      - {ヒット}, ノヴァ: マイトに繋いでも投げが届かないのでノヴァで攻め継続した方がいい
+      - **派生なし**: 確反が届きにくい
+      - グリード: ガード後に投げが届かない
+    - 中ネクサス: 10F遅れ、短い技を潰して当たる
+      - グリード: ガードされて+4で投げ間合い
+    - **ガード**: -3で中足の間合い
+      - {空振り}, 2MP: 差し返し
+    - 弱ニー(+5): 立ちガードされて-3で投げ間合い
   - 通常投げ: 4F遅れ
   - 後退: シミー
 
