--- a/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
@@ -158,22 +158,39 @@
     - ステップ, MP, ...
   - DR 2MK(g)
     - MP(h)
-    - MP(g), 2LP,
+    - MP(g), 2LP
 
-### ラッシュ中段・下段
+### ラッシュ下段のヒット確認
+
+（ガードリバーサル: 通常投げ/何もしない）
+
+- DR 6LK
+  - {ヒット}, 2MP, 強アッパー
+    - DR 6LK, ...
+  - {ガード}
+    - 2LP, LP
+      - {ヒット}, 弱ネクサス
+        - {ヒット}
+          - ノヴァ
+            - {ヒット}, DR 4HP, 強アッパー-h
+              - 強ショット
+            - {ガード}, 前投げ
+        - {ガード}, ガード
+      - {ガード}
+        - ガード
+    - 前投げ
+    - 後退
+
+### ラッシュ中段のヒット確認
 
 （ガードリバーサル: 通常投げ/4F技/何もしない）
 
-- DR 6LK/6MP(h), 2MP, 強アッパー
-  - DR 6LK/6MP, ...
+- DR 6MP(h), 2MP, 強アッパー
   - DR 前投げ
-- DR 6LK(g)
-  - 2LP(h), LP, 中アッパー
-    - DR 6LK/6MP, ...
-  - 2LP(g), LP, 弱ショット, ガード
 - DR 6MP(g)
-  - MP(相打ち), 2MP, 強アッパー, ...
-  - MP, 2MP, 弱ショット
+  - MP
+    - {ヒット/相打ち}, 2MP, 強アッパー, ...
+    - {ガード}, LP, ガード
 
 ### 6LKのヒット確認
 
