--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
@@ -115,7 +115,7 @@ MP(g)より少し遠い。しかもちょっと位置が変わるだけで距離
 - 強ショット: その場受け身はしゃがみ攻撃を出さないと当たって+9、後方受け身でもジャンプできない
   - {後方受け身, ジャンプ}, SA1: 追撃
   - {後方受け身, 前方ジャンプ}, 強アッパー(+3): 対空
-  - {後方受け身, 垂直ジャンプ}, OD上ショット, SA1: 追撃
+  - {後方受け身, 垂直ジャンプ}, (OD上ショット), SA1: 追撃
   - {その場受け身, ガード}: +9、しゃがみガードでも当たる
     - 前進: 対空しやすい距離に進む
 - 弱ショット: ガードで+3、その場受け身からジャンプできない
@@ -135,11 +135,13 @@ MP(g)より少し遠い。しかもちょっと位置が変わるだけで距離
 前投げと後投げで同じ距離。
 基本的に強ショットでいい。その場受け身から無敵技が届くキャラも限られている。
 
+その場受け身は強アッパー-hと近い状況。
+
+後方受け身からジャンプに強ショットが引っかかるとSA1が入る。
+
 ## {端} 前投げ: 21
 
-端では中央よりも近い。
-
-ラッシュ軸:
+崩し:
 
 - DR 2MK(+2): ヒットで+10、ガードで+4で2F歩いて投げが届く
   - {ヒット}, 4HP, 中ショット: 少し離れていてどのキャラにも最速で安定して繋がる
@@ -152,16 +154,21 @@ MP(g)より少し遠い。しかもちょっと位置が変わるだけで距離
     - 2MP, 中ネクサス
     - 前進(2F): 前投げ
     - ガード: シミー
-- DR(2-4F) 2MK: 長めに走る、ヒットで+8、ガードで+2の投げ間合い
-  - {ガード}
-    - 前投げ
-    - 後退: シミー
 - DR 前投げ: 目押し
 - DR ガード: -5で投げ間合い
 - DR 強ネクサス: コパンや投げを空振りして当てる
 - DI: 無敵技やDI以外で割り込めない、BOに強い
 
-中ショット軸:
+削り:
+
+- 中ネクサス(+2): ヒットで+4、ガードは-3で投げ間合いの外
+
+  - {ヒット}
+    - ノヴァ, ...
+    - 2LP
+  - {ガード}, SA: -3からぶっぱ、サガットを知ってる人用
+
+その他
 
 - 中ショット: +9、最速しゃがみ中攻撃暴れに負ける
 - 6MP: 中段、カウンターでLPが入る
@@ -175,17 +182,14 @@ MP(g)より少し遠い。しかもちょっと位置が変わるだけで距離
   - {ガード}, MK: 4F遅れだが、弱攻撃は潰して固める
   - {ガード}, 2HP, 強ネクサス: 4F遅れ、パニカンで繋がる
   - {ガード}, HK(1), 強ネクサス: カウンターで繋がる、しゃがんでいると当たらない
-
-その他:
-
 - 強ニー: 立っていると-5、しゃがんでいると+4
-- 中ネクサス(+2): ヒットで+4、ガードは-3で投げ間合いの外
-  - {ガード}, SA: -3からぶっぱ、サガットを知ってる人用
 - 弱ニー(+8): ガードで五分、リターンがイマイチ
+- DR(2-4F) 2MK: 長めに走る、ヒットで+8、ガードで+2の投げ間合い
+  - {ガード}
+    - 前投げ
+    - 後退: シミー
 
 MPからのガードは立ち→しゃがみのファジーにするとジュリの中足・大足の組み合わせもガードできる。ただ、タイミングが難しい。
-
-後方受け身からジャンプに強ショットが引っかかるとSA1が入る。
 
 ラッシュすると無敵技確定。2LPや後退で止まっても-5。
 
@@ -197,15 +201,31 @@ MPからのガードは立ち→しゃがみのファジーにするとジュリ
 
 その他
 
-- {端} OD上ショット: ヒットすると6HKからコンボ、DIは割れてヒットと同じ、ジャンプできない
-- {端} DR MP: 目押し
-- {端} 中ニー(+4): ガードすると(+8)で当たって+1になる、DI確定、ヒットすると弱アッパーで追撃できる
-  - 前投げ: 4F遅れ
-  - {ガード}, 後退: シミー
+- {端}
+  - 強ショット: しゃがみ攻撃を出さないと+9
+    - {ヒット/ガード}
+      - 強ショット: ジャンプできない、インパクトを返せない
+      - OD下ショット: インパクトを返せる
+        - {ヒット}, DR 2MP, ...
+        - {前方ジャンプ}, 弱アッパー: 対空
+  - DR 2HP
+    - 強ネクサス
+      - {カウンター}, 2LP: カウンターで繋がる
+    - {ガード}
+      - 弱ショット: -6で中足の外
+  - DR MP: 目押し、密着は難しいのでコンボはHKが無難
+  - DR 2LP: -5でLKの外
+  - DR 2MK: 最速だと遠くてコンボにならない、目押しで長めに走ると2MPが届く
+  - DR 2MP-HP: 目押し、DR 2MP(g)-HP(c)で強ネクサスが繋がる
+  - OD上ショット: ヒットすると6HKからコンボ、DIは割れてヒットと同じ、ジャンプできない
+    - {ヒット}, 6HK/DR 2MP/DR 4HP, ...
+    - {ガード}
+      - 強ショット: ジャンプできない、インパクトを返せる
+  - 中ニー(+4): ガードすると(+8)で当たって+1になる、DI確定、ヒットすると弱アッパーで追撃できる
+    - 前投げ: 4F遅れ
+    - {ガード}, 後退: シミー
 
 端はその場受け身と同じ。
-
-その場受け身は強アッパー-hと近い状況。
 
 前投げと違って、端でもその場受け身くらい離れる。
 
