--- a/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
@@ -268,6 +268,18 @@
   - {前方ジャンプ}, HK, 強ノヴァ, ...
   - {後方ジャンプ}, HK, 中ショット
 
+### 端から端まで運ぶインパクト返し
+
+（ドライブインパクトへの対応練習）
+
+- DI(pc), ステップ, DR 4HP, 強ノヴァ, DR 4HP, 強ニー, 弱アッパー
+  - MP: +8
+    - MP(+3)
+      - {ヒット}, 4HP, ...
+      - {ガード}, MP, ...
+    - 前投げ: 目押し
+    - 後退: シミー
+
 ## その他
 
 ### 昇竜やSAの確反 2
