--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの選択肢.md
@@ -119,6 +119,16 @@ MP, MPに無敵技以外で割り込めない。
 
 前投げから重ねるとDR 2MK(+2)だけど密着にならない。
 
+## 弱/中ネクサス(+2): 18/21
+
+- {ヒット}
+  - ノヴァ, ...
+  - 2LP, ...
+- {ガード}: -3で投げ間合いの外
+  - ガード
+  - SA3: 本来-5なので確反狙いに対してぶっぱ
+- {インパクト}: 返せる
+
 ## 6MP(+1): 22-23
 
 ド密着ならヒットで2LP, LPが繋がる。
