--- a/shared/game/ゲーム.md
+++ b/shared/game/ゲーム.md
@@ -1,5 +1,7 @@
 # Game
 
+勝負、駆け引き。
+
 Work と違って、結果そのものに影響があるわけではない。
 
 何らかのルールを決める。
@@ -85,3 +87,7 @@ gameはworkと違って、何も変えないこともある。
 
 既存のゲームの一部だけを変えて別のゲームにするのもゲームの作り方の一つ。
 例えば、大富豪で出していくカードを同時に伏せて出すようにしたらどうなるか、とか考える。
+
+ゲームは駆け引きを楽しむ。
+
+友人や恋人を相手に駆け引きを楽しむのは印象が良くない。
