--- a/shared/entertainment/humor/ユーモア.md
+++ b/shared/entertainment/humor/ユーモア.md
@@ -227,3 +227,7 @@
 視点のおかしさは「どこ見てんねん」と思われるくらいを目指す。
 
 面白さやユーモアというものは個性から生まれる。他の人と同じだと面白くない。
+
+変なものは異質で敬遠されたり忌避されたりすることがある。
+
+ただ変なだけじゃなくて、それを受け入れたり、それを受け入れさせたりするのがユーモアとしては大事。
