--- a/shared/music/音楽.md
+++ b/shared/music/音楽.md
@@ -44,3 +44,8 @@ https://youtu.be/69b0XDX6Mi0?si=SWd-QIton1VpDiHd
 
 メロディはあまり重要ではない。
 一つのピッチしか出ない太鼓だけでも音楽になる。
+
+音楽としてはまずレガートであることが全ての基礎。
+強調表現として目立たせたいところをスタッカートしても、ベースがレガートでないと目立たない。
+
+リズムが正確でないと、溜めたり走ったりしても目立たない。
