--- a/shared/training/練習.md
+++ b/shared/training/練習.md
@@ -341,3 +341,7 @@ https://m.twitch.tv/videos/1991942489?desktop-redirect=true
 
 練習しても上手くなるわけではない。上手くなるのは学習の時で、練習は同じ動作に慣れるだけ。
 努力しても上手くならないなら、根本的に間違っている部分がある。それを直さないと練習しても無駄。
+
+どんなことに慣れればいいかは学習するもので、練習の外。
+
+サボりに慣れることも練習。良いかどうかはともかく。
