--- a/shared/voice/training/tips/声を安定させる.md
+++ b/shared/voice/training/tips/声を安定させる.md
@@ -110,3 +110,6 @@ sの発音を長く出したまま、息と声の配分を100:0から0:100、0:1
 声が出てない間も息の圧はかけておいた方がレガートを維持しやすい。それに声のレスポンスが良くなってリズムが取りやすい。
 
 感情を抑えて声を安定させるのではなく、感情を出しても声を安定させる。
+
+まずは低音〜中音のロングトーンの練習が基礎。
+声帯に無理な力をかけずに、腹で息を安定させる。息が安定しないと声は安定しない。
