--- a/shared/voice/training/tips/声を育てる.md
+++ b/shared/voice/training/tips/声を育てる.md
@@ -45,3 +45,6 @@
 自分という楽器がリコーダーだったらまだいいけど、カスタネットやトライアングルだったらまず楽器を替えないとできることが少なすぎる。
 
 キーを下げすぎたり裏声ばかりで歌ったりしても声は良くならない。しっかり強い呼気と張力で歌う練習が良い声を育てる。ただ、声帯が硬くなるのは良くない。
+
+地声でチャレンジしないと声は育たない。裏声に逃げない。
+より大きな声、小さな声、高い声、低い声、柔らかい声、ロングトーン、などを全て地声でチャレンジする。
