--- a/shared/art/芸術.md
+++ b/shared/art/芸術.md
@@ -310,3 +310,8 @@ https://ja.wikipedia.org/wiki/%E9%BB%92%E3%81%AE%E6%AD%A3%E6%96%B9%E5%BD%A2
 単に加工というよりは、工夫の部分にartがあると思う。
 
 アーティストにはエゴが必要。個性がないといけない。しかし、その前に基礎的な技術がないとエゴを表現できない。目的としてのエゴと手段としての技術を両立する。
+
+創造性だけがアートではなくて、伝統芸能みたいに芸能を受け継いで失わせないようにする精神性もアート。
+人が何らかの意図を持って手を加えるのがアート。本来なら失われていくはずの芸能を1000年先に残すのはアートだ。
+
+アートにはユーモアが求められることもある。
