--- a/shared/game/theory/プレイヤー.md
+++ b/shared/game/theory/プレイヤー.md
@@ -20,3 +20,5 @@
 ビジネスなんかはむしろルールを破壊するような方向性が重要。
 
 プレイヤーとして重要なのは、パフォーマンスが高いこと。
+
+良いプレイヤー、上手いプレイヤーはそこらじゅうにいる。上位3%くらいならそれで十分。でも、トップを目指すなら「すごい」プレイヤーでないといけない。上位3%の壁を越えて、卓越しなければならない。
