--- a/shared/government/国家.md
+++ b/shared/government/国家.md
@@ -9,3 +9,9 @@
 政府というのは国民から奪った権利を集約することで治安を保つもので、政府が治安を保てないなら国民に権利を返さないといけない。
 行政が国民の生活を助けないなら、国民は他人から物を奪って生活していい。
 警察が犯罪を咎めないなら、国民は犯人を殺していい。
+
+国家最大の消費行動は戦争、軍事行動だ。
+国家が消費すれば、誰かが儲かる。国民が儲かると一番いいが、参戦しない他国を儲けさせてしまうこともある。
+ただ、国内の物価がバカ上がるのは確実なので、致命傷になることもある。
+
+国の崩壊はいつも研究者の流出から始まる。アインシュタインも元はドイツにいた。
