--- a/shared/lifestyle/meal/tips/冷蔵庫の使い方.md
+++ b/shared/lifestyle/meal/tips/冷蔵庫の使い方.md
@@ -1,2 +1,4 @@
 卵や瓶ものは冷やさないと痛みやすいので、冷蔵庫の奥に入れた方がいい。
 冷蔵庫の扉のスペースには痛みにくいものを入れる。缶とか中華調味料とかわさびチューブとか。
+
+冷蔵室は余熱を取った保存食のために一段空けておくくらいでちょうどいい。パンパンに詰めると冷えにくくなる。
