--- a/shared/war/戦争.md
+++ b/shared/war/戦争.md
@@ -149,3 +149,8 @@ Lose-WinをLose-Loseに持ち込む。
 「誰かの喧嘩を止めれば褒めてもらえるぞ。オマケに最低でも二人殴れる。」『呪術廻戦』
 
 負けたら死ぬ戦いでは、死なないために死ぬほど準備しておかないといけない。
+
+戦争は避けるべきだが、戦争でしか解決しない問題もある。ただ、それに巻き込まれる側が関係ないと思ったなら主導者を殺さないといけない。
+
+戦争に関わる人ほど戦争を恐れなければならない。
+戦争には常にリスクがある。アメリカもベトナム戦争で負けるとは思っていなかっただろうし、ナチスドイツもソ連が参戦してくるとは思っていなかっただろう。
