--- a/shared/war/敵.md
+++ b/shared/war/敵.md
@@ -34,3 +34,7 @@ Lose-Winの関係をLose-Loseに引きずり込む。
 逆にいうと、誰かの損を願っている人はその誰かのことを敵だと思っているということ。
 
 自分のことを敵だと思っている人は、こちらも敵だと思って対処しないといけない。さっさと殺すのが一番。何も対処しないのはぬるい。
+
+敵対したらついでに略奪することもある。敵は畑。敵を愛し、恵みに感謝せよ。
+
+自ら敵を作らず、相手が勝手に敵対したら恵みに感謝する。
