--- a/study/politics/正義.md
+++ b/study/politics/正義.md
@@ -31,3 +31,5 @@
 正義は暴力を止めるための暴力であって、権力になってはいけない。正義に権力を与えることには正義がない。正義を持たない人たちが誰かの正義に丸投げして権力を与える。
 
 「いいですか、スカーレット様。人を殴る時はこういったグローブを着けて、自分が傷付かずに気持ちよく豚野郎をブン殴れるようにしなければなりません。」『最後にひとつだけお願いしてもよろしいでしょうか』
+
+「良心の痛まない拳とは、気持ちいいものだ」『凶乱令嬢ニア・リストン』
