--- a/shared/logic/inference/推論.md
+++ b/shared/logic/inference/推論.md
@@ -16,3 +16,6 @@
 推論では確度が下がるので、元々の確度が高い事実を使わないと結論がブレやすいし、推論に飛躍がある場合でも同様。できるだけ確度を落とさないようにする。
 
 誤った推論
+
+フェルミ推定は小さな範囲の情報から大きな範囲の情報を推定するので、そもそも小さな範囲の情報も知らないと何もわからない。
+よくある例は「シカゴのピアノ調律師の人数は？」だが、シカゴの人口やピアノの普及率などの情報を全く知らないと手がかりがない。
