--- a/shared/wealth/福祉.md
+++ b/shared/wealth/福祉.md
@@ -37,3 +37,5 @@ Wealth は福利や福祉の意味がある。
 そうではなく、自らが強くならなければならない。最後に頼れるのは自分しかいない。
 
 愛されれば、生かされる。
+
+福祉を受け取るだけでは人は堕落してしまう。難民なんかもそう。救われる者にも努力を強いるべきだ。たとえば、暴漢から助けたら、トドメはその人に刺させる。
