--- a/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
@@ -150,6 +150,7 @@ HK(1), 強ノヴァは相手が空中でも使える。
   - {端} 2MP, CR 4HP, 中ノヴァ, 強ニー, 弱アッパー: 3054
   - {端} 2MP, CR 4HP, 中ネクサス, 4HP, 強アッパー-h: 3402
   - {端} 2MP, CR 4HP, 中ネクサス, 4HP, 強ニー, 中アッパー: 3225
+  - {端} 2MP, CR 4HP, 中ネクサス-(2-3F遅)マイト, 4HP, 強アッパー-h: 3574
   - 2MP, CR HK, 強ノヴァ, DR 4HP, 強アッパー-h: 3465
   - {端} 2MP, CR MP, 4HP, (2-3F遅)中ショット, DR 4HP, 強アッパー-h: 3651
   - 2MP, CR MP, 4HP, 強ニー, ODアッパー: 3237
