--- a/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
@@ -138,19 +138,18 @@ HK(1), 強ノヴァは相手が空中でも使える。
 ## 2MP
 
 - SAなし:
+  - 2MP, 強アッパー: 2200
   - 2MP, 強ニー: 2000
   - 2MP, 中マイト: 1740
+  - {立} 2MP, 中グリード: 1900
   - {端} 2MP, OD上ショット, 6HK, 中アッパー: 3000
   - 2MP, CR MP, 4HP, 強ニー, 弱アッパー: 2982 34F
   - 2MP, CR 4HP, 中ノヴァ, 6HK, 強アッパー: 2934
-  - {端} 2MP, CR 4HP, 中ネクサス-(2F遅らせ)マイト, 4HP, 強アッパー-h: 3574
-  - {端} 2MP, OD上ショット, DR 4HP, 強アッパーh: 3500
-  - {端} 2MP, CR HK, 強ノヴァ, 4HP, 強アッパー-h: 3381
-  - {端} 2MP, CR 4HP, 中ネクサス-(2F遅らせ)マイト, 4HP, 中ニー, 中アッパー: 3294
-  - {端} 2MP, CR 4HP, 中ノヴァ, 強ニー, 弱アッパー: 3054
-  - {端} 2MP, CR 4HP, 中ネクサス, 4HP, 強アッパー-h: 3402
-  - {端} 2MP, CR 4HP, 中ネクサス, 4HP, 強ニー, 中アッパー: 3225
   - {端} 2MP, CR 4HP, 中ネクサス-(2-3F遅)マイト, 4HP, 強アッパー-h: 3574
+  - {端} 2MP, OD上ショット, DR 4HP, 強アッパーh: 3500
+  - {端} 2MP, CR 4HP, 中ネクサス, 4HP, 強アッパー-h: 3402
+  - {端} 2MP, CR 4HP, 中ネクサス-(2-3F遅)マイト, 4HP, 中ニー, 中アッパー: 3294
+  - {端} 2MP, CR 4HP, 中ネクサス, 4HP, 強ニー, 中アッパー: 3225
   - 2MP, CR HK, 強ノヴァ, DR 4HP, 強アッパー-h: 3465
   - {端} 2MP, CR MP, 4HP, (2-3F遅)中ショット, DR 4HP, 強アッパー-h: 3651
   - 2MP, CR MP, 4HP, 強ニー, ODアッパー: 3237
