--- a/games/Pawapro/2024/栄冠ナイン.md
+++ b/games/Pawapro/2024/栄冠ナイン.md
@@ -475,3 +475,5 @@ Cあると大きく崩れることがかなり減る感覚。
 セカンドとショートが固くなると内野を抜かれなくなるので、失点が大きく減る。あとは外野の走力も高いともっといい。
 
 捕手と三塁手は適性が近いのでコンバートしやすい。
+
+2025アップデートで代打ボーナスがなくなって、パリコレするだけでは経験値が入らなくなった。ちゃんと打たないといけない。代走ボーナスはある。
