--- a/shared/sports/野球.md
+++ b/shared/sports/野球.md
@@ -11,7 +11,7 @@
 
 - {満塁}
   - ゴロは避けたい
-  - スクイズは避ける
+  - スクイズは避ける（ホームを踏むだけで強制アウトになる）
 - {走者なし}
   - 三塁方向に打ちたい（一塁セーフになりやすい）
   - {0アウト}
@@ -40,6 +40,11 @@
 - 長打を避けるならファーストとサードをファールラインに近づける
   - （内野を抜かれやすくなるが、中央付近を抜かれても後ろに外野がいるので長打は避けられる）
 
-## メモ
+## 打順のセオリー
 
-満塁の場合、ホームベースを踏むだけで強制アウトになるのでスクイズは狙いにくい。
+- 一番には、とにかく出塁率が優れたバッター
+- 二番には、最も優れた（出塁率と長打率が両方高い）バッター
+- 四番には、長打率の高いバッター
+
+最も優れたバッターを2番に置く。打席が多く回ってくるようにする。ホームランは1点より2点がいいので2番。（二番最強打者論）
+特に一番、二番には出塁率が優れたバッターを置く。
