--- a/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
@@ -255,18 +255,12 @@
 
 ### キャンセルラッシュ 2
 
-（ダメージ復帰リバーサル: 4F技）
+（ダウンリバーサル: 4F技）
+（ガードリバーサル: 4F技）
 
 - 2MP(h), CR 4HP, 中ノヴァ, 6HK, 強アッパー
-  - ステップ
-    - MP(c), 4HP, 強ニー, 弱アッパー, DR 6MP, ...
-    - MP(h), LP, 中アッパー, DR 6LK, ...
-    - MP(g), LP, 弱ショット, ガード
+  - DR 前投げ
 - 2MP(g), CR 前投げ
-  - {何もしない}, 強ショット
-  - {垂直ジャンプ}, 弱アッパー
-  - {前方ジャンプ}, HK, 強ノヴァ, ...
-  - {後方ジャンプ}, HK, 中ショット
 
 ### 端から端まで運ぶインパクト返し
 
