--- a/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
@@ -147,6 +147,10 @@ SAを弾抜けに使うならSA3よりSA2の方が少し長い。
 
 SA1は発生が遅いので、相殺を狙っても負けがち。
 
+## 弾ジャスパ
+
+ジャスパラッシュはDR LP, HKが長くて早いけどギリギリ。あと遠くてHK(2)になってしまうことがある。でもDR 2LPは短い。
+
 ## 守り
 
 ステローとニーの距離が動きやすい。
