--- a/games/Street-Fighter/Six/characters/Sagat/サガットの対策.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの対策.md
@@ -3,6 +3,8 @@
 サガット有利になる状況が結構あるので、割り込みポイントは覚えないといけない。
 割り込みポイントというよりは、立ったら確反、ということが多い。
 
+サガット対策はまず見てからインパクト。なんなら適当に置いても確定しやすい。
+
 ## ニー
 
 連携の締めにニーを混ぜてくる場合は立ちガードから確反を狙う。OD以外がめり込んだら5F以上はある。
@@ -11,3 +13,9 @@
 ## ショット
 
 サガット戦は近距離の強ショットに大足でお仕置きするのが大事。
+
+## 見てからインパクト
+
+- 弱ショット
+- ニー
+- 2MP/2MP-HP/2HP, ネクサス
