--- a/shared/art/芸術.md
+++ b/shared/art/芸術.md
@@ -315,3 +315,7 @@ https://ja.wikipedia.org/wiki/%E9%BB%92%E3%81%AE%E6%AD%A3%E6%96%B9%E5%BD%A2
 人が何らかの意図を持って手を加えるのがアート。本来なら失われていくはずの芸能を1000年先に残すのはアートだ。
 
 アートにはユーモアが求められることもある。
+
+芸術では「魅せる」ことを意識する。
+
+技術そのものは芸術の基礎ではあるけど本質ではない。あくまでも芸術に付随するもの。
