--- a/shared/production/user/interface/操作性.md
+++ b/shared/production/user/interface/操作性.md
@@ -3,3 +3,6 @@
 間接的な操作は難しい。
 例えば、権限が欲しい時に裏で承認プロセスが回っていると、申請だとか権限とは直接的に関係ない概念を扱わないといけない。
 こういう中身をうまく隠して直接的な操作にできると操作しやすい。
+
+操作はできるだけ状態を持たないようにする。
+たとえばエレベーターでボタンを2回押すと一度押したボタンをキャンセルできるものがあるが、押してなくても2回押すとキャンセル、というかその階に止まらない方がいい。それなら目が見えてなくても1回でON、2回でOFFとして操作できる。状態を持ってしまうと、ボタンがONかどうかわからない状態で2回押した場合にONになるかOFFになるかわからない。
