--- a/shared/music/音楽.md
+++ b/shared/music/音楽.md
@@ -49,3 +49,5 @@ https://youtu.be/69b0XDX6Mi0?si=SWd-QIton1VpDiHd
 強調表現として目立たせたいところをスタッカートしても、ベースがレガートでないと目立たない。
 
 リズムが正確でないと、溜めたり走ったりしても目立たない。
+
+音を揃えるための出だしをアインザッツという。
