--- a/shared/care/配慮.md
+++ b/shared/care/配慮.md
@@ -174,3 +174,5 @@ Careは単に失われないようにするだけで、Entertainmentだけでは
 「気遣いできる人ほど悪いところにも気づくので人が嫌い」説もある。
 
 先回りして対処するだけが配慮ではない。時には任せるのも配慮。
+
+気配りの基礎は周りに関心を持つことや観察すること。
