--- a/shared/music/theory/レガート.md
+++ b/shared/music/theory/レガート.md
@@ -47,3 +47,5 @@ https://youtube.com/watch?v=W8YRZxnuz38&si=1DEYRJooIiMs_H5u
 音楽としては、一部だけがすごく良いよりも全体的にリズムとメロディが合ってる方が聴きやすい。コンボが途切れるのが良くない。進行感やレガートは長く続くほど良い。
 
 まずはリズム感がないと簡単にレガートが崩れてしまう。リズムが全ての音楽の基礎。
+
+高さの異なる音を滑らかに繋ぐ音楽表現をスラーという。
