--- a/games/Pawapro/2024/栄冠ナインの序盤.md
+++ b/games/Pawapro/2024/栄冠ナインの序盤.md
@@ -11,6 +11,8 @@
 評価と育成はとにかく勝つしかない。勝てないと試合数も少ないので、とにかく勝つことが育成にも繋がる。その上で1年をベンチに入れて代打に出す。できれば打たせる。できればスタメンにする。
 器材はまず1000Pを全部集めてグラウンドレベルを上げるのと、特打や特守を使うための器材を集めるのが重要。
 
+栄冠ナインは弱小をとにかく早く抜けたい。4枚でやりくりするのがきつい。
+
 ## 1年目の目標
 
 - 秋大会終了時点で、学校の評判を中堅にする
