--- a/games/Street-Fighter/Six/theory/守りの基本.md
+++ b/games/Street-Fighter/Six/theory/守りの基本.md
@@ -2,6 +2,20 @@
 
 守りとは、相手の攻めを切ることだ。
 
+## 攻めに割り込む
+
+相手の攻めに割り込む方法としては、
+
+- 無敵技
+- ジャストパリィ
+- 有利になってから（弱を1回ガードしてから）4F技
+- 離れてから（だいたい弱を3回ガードしてから）6-7F技
+- 離れてからインパクト
+- など
+  相手がよく使う連携が何かをよく見て、割り込めるタイミングを図るのが第一段階。まずはガードを固めて、攻めをよく見る。まぁ、離れてから中パンは基本。
+
+https://youtube.com/watch?v=xhg2IXDGTpk&si=5jasO7sNVL4pjoPW
+
 ## 守りの読み合い
 
 守る側は基本的に無敵技とジャンプ入れっぱの二択でほとんど守れる。ただ、リスクやゲージの問題がある。
@@ -186,3 +200,5 @@ DIを拒否するなら、ジャンプより投げ。もちろん割り込めな
 相手がコパン中足みたいな不利な連携をしてきた場合にこちらも中パンなどそこそこ発生の早い技を押しているのにカウンターで負けた場合、コパンをガードしてから最速で押せてない。単に反応できてない場合もあるし、ガード硬直が切れるタイミングを捉えられてない場合もあるし、ラグの場合もある。
 
 打撃とコマ投げの択には正面からぶつからないといけない。安易に安い無敵技で暴れるのは良くない。リスクリターンを合わせる。打撃に暴れるならSAで、投げには垂直を合わせる。リターンで負けない。
+
+長くて早い小パン中パンを持っているキャラは守りが強い。
