--- a/games/Street-Fighter/Six/theory/差し合いの基本.md
+++ b/games/Street-Fighter/Six/theory/差し合いの基本.md
@@ -173,3 +173,5 @@
 差し合いの技は、攻め気味と守り気味でさらに細分化してもいいかも。
 
 ジャンプに対してパリィを押す人が結構いるので、初手から空ジャンプ投げでもいいのかも。
+
+差し合いでは誰しも先端を当てたいと思っているので、その技の間合いに一瞬踏み込んで後退することで空振りを誘える。
