--- a/shared/communication/channels/sex/tips/性自認.md
+++ b/shared/communication/channels/sex/tips/性自認.md
@@ -12,3 +12,5 @@ LGBT やその派生などで色々規定されている。
 
 他人からの扱いについては、外から見てもわからないので発信していかないと進まない。
 「体は男だけど女として扱ってほしい」とか「どっちでもない」とか、口に出さないと伝わらない。
+
+Sexと違ってGenderには別に男女があるわけじゃない。もしGenderの認知が男女で分けられるなら妄想だ。
