--- a/shared/communication/コミュニケーション.md
+++ b/shared/communication/コミュニケーション.md
@@ -267,3 +267,7 @@ engagement とも関係が深い。
 社交とコミュニケーションは別。コミュニケーションができても、社交が下手ってこともある。ただ、コミュニケーションが基礎。
 
 社交は単なるコミュニケーションよりもコストがかかると思っていい。
+
+行動が決まっているなら、その元になった目的は2番目に伝える。「こうする、その目的は〜」の順序が聞きやすい。より具体的な結論から伝える。
+
+抽象的な話は後回し。
