--- a/shared/decision/知性.md
+++ b/shared/decision/知性.md
@@ -53,3 +53,6 @@ learning, thinking, training あたりは知性の関連だと思う。
 > https://x.com/wb_opus_1/status/1394270415065731078?s=61
 
 「馬鹿って話長いよね」（夢野あかり）
+
+人間の知性もベースになるのはプロセッサーとメモリの性能。
+ただ、それでもソフトウェアが悪いと結果は悪くなる。どれだけハードの性能が良くても、素早く間違った答えを出してしまうのは意味がない。
