--- a/shared/development/卓越性.md
+++ b/shared/development/卓越性.md
@@ -30,3 +30,5 @@
 こだわりは少ない方が楽だけど、大事なところはこだわらないと卓越できない。楽な人生と、アートとしての人生。
 
 人が練習していないときに練習すれば追いつきやすい。ただ、量よりも質がまず重要。
+
+他人の評価は「うまい」と言われることよりも「すごい」と言われることを目指す。
