--- a/shared/government/military/軍事.md
+++ b/shared/government/military/軍事.md
@@ -7,3 +7,5 @@
 軍は兵士が死んで減ることを前提に作られている場合があるので、戦争がしばらくないと増えすぎることがある。
 
 兵は死兵でなければならない。国よりも命を守る兵は役に立たない。志願兵しか役に立たない。
+
+国民皆兵にするのは難しい。明らかに向いてない人もいるし、障害者などをどこまで免除するかの問題もある。
