--- a/shared/commerce/marketing/channels/イベント.md
+++ b/shared/commerce/marketing/channels/イベント.md
@@ -69,3 +69,5 @@ https://www.kokuchpro.com/
 「サークルやイベントの雰囲気を乱す行動をされる方、運営側の指示に従っていただけない方は、参加をお断りする場合があります。」
 
 サークルは常連ばかりになると常連も個別に集まったりして来なくなる。常に新しいメンバーを取り込んでいかないといけない。停滞するとダメ。
+
+イベントなどで集まる場所はトイレをきれいにする。
