--- a/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
@@ -146,13 +146,16 @@ HK(1), 強ノヴァは相手が空中でも使える。
   - 2MP, CR MP, 4HP, 強ニー, 弱アッパー: 2982 34F
   - 2MP, CR 4HP, 中ノヴァ, 6HK, 強アッパー: 2934
   - {端} 2MP, CR 4HP, 中ネクサス-(2-3F遅)マイト, 4HP, 強アッパー-h: 3574
-  - {端} 2MP, OD上ショット, DR 4HP, 強アッパーh: 3500
   - {端} 2MP, CR 4HP, 中ネクサス, 4HP, 強アッパー-h: 3402
   - {端} 2MP, CR 4HP, 中ネクサス-(2-3F遅)マイト, 4HP, 中ニー, 中アッパー: 3294
   - {端} 2MP, CR 4HP, 中ネクサス, 4HP, 強ニー, 中アッパー: 3225
+  - {端} 2MP, OD上ショット, DR 4HP, 強アッパーh: 3500
   - 2MP, CR HK, 強ノヴァ, DR 4HP, 強アッパー-h: 3465
   - {端} 2MP, CR MP, 4HP, (2-3F遅)中ショット, DR 4HP, 強アッパー-h: 3651
   - 2MP, CR MP, 4HP, 強ニー, ODアッパー: 3237
+  - 2MP, CR 4HP, CR HK, 強ネクサス, 4HP, 強ニー, 中アッパー: 3499
+  - {端} 2MP, CR 4HP, CR HK, 強ネクサス, 4HP, 強アッパー-h: 3653
+  - {端} 2MP, CR 4HP, CR HK, 4HP, 強アッパー-h: 3792
 - SA1:
   - 2MP-HK, SA1: 3360
   - 2MP, OD上ショット, SA1: 3140
@@ -163,6 +166,8 @@ HK(1), 強ノヴァは相手が空中でも使える。
 - SA2:
   - 2MP-HK, SA2: 4000
   - 2MP, CR HK, 強ノヴァ, 6HK, SA2: 3755
+  - {端} 2MP, CR 4HP, 中ネクサス-(2-3F遅)マイト, 4HP, 中ニー, SA2: 4018
+  - {端} 2MP, CR 4HP, 中ネクサス, 4HP, 強ニー, SA2: 3897
   - 2MP, CR MP, HK, CR 6HK, HK(1), 強ノヴァ, 6HK, SA2: 4259 (2:4139)
 - SA3:
   - 2MP, 強アッパー, SA3: 5000
@@ -172,7 +177,10 @@ HK(1), 強ノヴァは相手が空中でも使える。
   - {端} 2MP, CR 4HP, 中ネクサス, 4HP, 強ニー, 中アッパー, SA3: 5225
   - 2MP, CR HK, 強ノヴァ, DR 4HP, 強アッパー-h, SA3: 5125
   - 2MP, CR MP, 4HP, 中ショット, DR 4HP, 強アッパー-h, SA3: 5231
+  - 2MP, CR 4HP, CR HK, 強ネクサス, 4HP, 強ニー, 中アッパー, SA3: 5499
   - 2MP, CR MP, HK, CR 6HK, 4HP, 強ニー, 弱アッパー, SA3: 5434
+  - {端} 2MP, CR 4HP, CR(6-9F遅) HK, 4HP, 強ニー, 中アッパー, SA3: 5615
+  - {端} 2MP, CR 4HP, CR HP, 4HP, 強ニー, 中アッパー, SA3: 5547
 
 ヒット確認できるならSA1/2はTCから直接の方が高い。
 
@@ -284,16 +292,21 @@ DR 2MP-HP, 強ニーは中央の初期位置あたりからでも端まで持っ
 - 6MP(+4), 2MP, 強ニー: 2420 41F
 - {端立} 6MP(+4), 2MP, 中グリード, 弱アッパー: 2950
 - {端} 6MP(+4), 2MP, ODニー, 弱アッパー: 3240
-- {端} 6MP(+4), 2MP, ODニー, ODアッパー: 3540
+- 6MP(+4), 2MP, CR 4HP, 中ノヴァ, 6HK, 強アッパー: 3189
 - {端} 6MP(+4), 2MP, CR HK, 強ノヴァ, 4HP, 強アッパー-h: 3519
+- {端} 6MP(+4), 2MP, ODニー, ODアッパー: 3540
+- {端} 6MP(+4), 2MP, CR 4HP, CR HP, 4HP, 強アッパー-h: 3959
+- {端} 6MP(+4), 2MP, CR 4HP, CR HP, 4HP, 強ニー, 中アッパー: 3746
 - 6MP(+4), 2MP-HK, SA1: 3640
-- 6MP(+4), 2MP, CR HK, CR HK, 強ノヴァ, 6HK, SA1: 3919
+- 6MP(+4), 2MP, CR MP, HK, CR 6HK, HK(1), 強ノヴァ, 6HK, SA1: 3971
 - 6MP(+4), 2MP-HK, SA2: 4200
 - 6MP(+4), 2MP, CR HK, 強ノヴァ, 6HK, SA2: 4121
-- 6MP(+4), 2MP, CR MP, HK, CR HK, 強ノヴァ, 6HK, SA1: 4533
+- 6MP(+4), 2MP, CR MP, HK, CR HK, 強ノヴァ, 6HK, SA2: 4533
 - {端} 6MP(+4), 2MP, ODニー, 弱アッパー, SA3: 5240
 - 6MP(+4), 2MP, CR HK, 強ノヴァ, DR 4HP, 強アッパー-h: 5337
 - 6MP(+4), 2MP, CR MP, HK, CR HK, 強ノヴァ, 強アッパー, SA3: 5452
+- {端} 6MP(+4), 2MP, CR 4HP, CR(6-9F遅) HK, 4HP, 強ニー, 中アッパー, SA3: 5805
+- {端} 6MP(+4), 2MP, CR 4HP, CR HP, 4HP, 強ニー, 中アッパー, SA3: 5746
 
 ## 6LK(+1)
 
