--- a/shared/care/responsibility/自由.md
+++ b/shared/care/responsibility/自由.md
@@ -85,3 +85,8 @@
 本当に自分勝手に振る舞いたいなら、全てを自分でできないといけない。
 たとえばVtuberだったら、個人勢でも絵や3D、2Dモデルを作っている人が関わっていて、それに見放されると続けられない。
 逆に、それらの感覚が一致する人なら見放されない。
+
+結局、真に自由な判断というものはないのかも。とはいえ自然な判断というのも全ての法則を理解しなければ無い。
+
+自由というのは自然でないこと。自然な法則から外れること。
+まぁ、物理法則などから外れているように見えても実際は法則に従っていることもある。空を飛ぶとか。
