--- a/shared/choice/value/価値観.md
+++ b/shared/choice/value/価値観.md
@@ -13,3 +13,9 @@
 価値観が理想や問題を規定する。
 
 価値観とか何を大切にするかっていうのは、何を優先するかってこと。求めているもの、正しいと思っているものの中でさらに順位がある。
+
+価値観、あるいは自分の持つ評価基準を他者と近づけるべきかどうか。
+
+他者からの評価が低かった場合に自分の評価基準も引き上げるべきかどうか。
+
+評価基準は複数の階層を持って、ここまで行かないと売れないけど、ここまでいけば個人的には満足、というように区別するべきではある。
