--- a/shared/entertainment/humor/ユーモア.md
+++ b/shared/entertainment/humor/ユーモア.md
@@ -231,3 +231,6 @@
 変なものは異質で敬遠されたり忌避されたりすることがある。
 
 ただ変なだけじゃなくて、それを受け入れたり、それを受け入れさせたりするのがユーモアとしては大事。
+
+自由さと奇抜さは同じものかどうか。
+文脈は違うけど似ている。自由というのは芸術や判断の文脈。自然と対立するもの。奇抜というのは、普通や一般と対立するものかな。
