--- a/shared/art/芸術.md
+++ b/shared/art/芸術.md
@@ -288,7 +288,7 @@ https://ja.wikipedia.org/wiki/%E9%BB%92%E3%81%AE%E6%AD%A3%E6%96%B9%E5%BD%A2
 アートとしては、「他と違う」「いつもと違う」部分を作ってみるのが基本。
 歌だったら、部分的に声を小さくしたり大きくしたり、高くしたり低くしたり、短くしたり長くしたり、テンポをずらしてみたり、和音にしてみたり、あえて不協和音にしてみたり、といった工夫ができる。
 
-自然は美しい。
+自然は美しい。しかし、芸術ではない。
 
 美しさだけがアートの目指すところではない。
 
@@ -319,3 +319,6 @@ https://ja.wikipedia.org/wiki/%E9%BB%92%E3%81%AE%E6%AD%A3%E6%96%B9%E5%BD%A2
 芸術では「魅せる」ことを意識する。
 
 技術そのものは芸術の基礎ではあるけど本質ではない。あくまでも芸術に付随するもの。
+
+自然に反する自由が基礎。
+芸術は自然と対立する。
