--- a/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
@@ -146,6 +146,7 @@ HK(1), 強ノヴァは相手が空中でも使える。
   - {端} 2MP, OD上ショット, 6HK, 中アッパー: 3000
   - 2MP, CR MP, 4HP, 強ニー, 弱アッパー: 2982 34F
   - 2MP, CR 4HP, 中ノヴァ, 6HK, 強アッパー: 2934
+  - {端} 2MP, CR 4HP, 中ノヴァ, 強ニー, 弱アッパー: 3054
   - {端} 2MP, CR 4HP, 中ネクサス-(2-3F遅)マイト, 4HP, 強アッパー-h: 3574
   - {端} 2MP, CR 4HP, 中ネクサス, 4HP, 強アッパー-h: 3402
   - {端} 2MP, CR 4HP, 中ネクサス-(2-3F遅)マイト, 4HP, 中ニー, 中アッパー: 3294
