--- a/shared/government/王.md
+++ b/shared/government/王.md
@@ -24,3 +24,10 @@
 
 戦争があれば、王は武力によって敬われる。
 しかし、平和になると武力以外の権威を示さなければならない。
+
+王は旗だ。
+国家や組織の象徴。民は国ではなく優れた王に忠誠を誓う。
+
+旗にならない、忠誠を集められない王族は切り捨てないといけない。
+
+王族は人間ではない。機械。
