--- a/shared/thinking/tips/ひらめき.md
+++ b/shared/thinking/tips/ひらめき.md
@@ -21,3 +21,6 @@
 天才のひらめきと秀才のロジックの両方を備えるべき。
 
 ひらめきはロジックで言うと飛躍になる。ロジックの世界でロジックの飛躍は厳禁だが、ロジックはあくまでも手段でしかない。
+
+閃きやすいタイミング「三上」というものがある。馬上（移動中）、枕上（布団の中）、厠上（トイレ）の三つ。
+風呂や食事などのリラックスしたタイミングも閃きやすい傾向にある。
