--- a/shared/dance/ダンス.md
+++ b/shared/dance/ダンス.md
@@ -3,3 +3,5 @@
 
 ダンスはまず小さな動きから始める。
 また、複雑な動作を複数の単純な動作にバラしてそれぞれ練習する。
+
+「人って感情が高ぶるとうまく喋れなくなる。自然と言葉じゃなくて身体表現が出る。で・・・変なこと言うけど、それこそがダンスなんじゃないかって、私は思ってる。」『ワンダンス』
