--- a/shared/government/legal/法律.md
+++ b/shared/government/legal/法律.md
@@ -30,3 +30,5 @@
 むしろ証拠があっても動機がないのは証拠を偽造された可能性が高い。
 
 行政がサービスを提供できないなら、代わりに国民がサービスを提供するのを違法にするべきではない。
+
+もし魔法の世界のように国の軍事行動で止められない個人がいた場合、超法規的な存在になる。あるいはSFの世界のように個人で所有、運用できる戦略兵器がある場合も同様である。法律はあくまでも国家の軍事力を背景に成立するものでしかない。
