--- a/shared/lifestyle/shopping/買い物.md
+++ b/shared/lifestyle/shopping/買い物.md
@@ -1,3 +1,7 @@
 - 同じ種類で安い商品とどう違う？
 
 楽天ペイはポイントがつくので、楽天ペイを優先して使った方がいい。
+
+業スーの焼きおにぎりが安すぎる。キロ571円くらい。
+アイリスオーヤマの小盛りごはんがキロ878円くらい。
+ただ、米は炊くと倍になるので、キロ1200円の白米を炊くとキロ600円くらい。まぁ、炊く手間はかかるけど。
