--- a/shared/logic/正しさ.md
+++ b/shared/logic/正しさ.md
@@ -26,3 +26,6 @@
 龍が如くの桐生一馬は、正しいかどうかはわからないけど、命張るなら協力する、って考える。
 
 正しさというのは「答えと一致する」というだけ。答えを出す人によって正しさは違う。正しさは相対的なものだ。
+
+正しさは何を答えとするかによって異なる。
+例えば、勝つための正しい行いとは、勝てる動きを身につけることだ。
