--- a/shared/war/戦争.md
+++ b/shared/war/戦争.md
@@ -154,3 +154,5 @@ Lose-WinをLose-Loseに持ち込む。
 
 戦争に関わる人ほど戦争を恐れなければならない。
 戦争には常にリスクがある。アメリカもベトナム戦争で負けるとは思っていなかっただろうし、ナチスドイツもソ連が参戦してくるとは思っていなかっただろう。
+
+戦場に善悪はない。ただ勝敗だけがある。
