--- a/shared/study/teaching/tips/教師を選ぶ.md
+++ b/shared/study/teaching/tips/教師を選ぶ.md
@@ -1,2 +1,4 @@
 初心者はどんな教師が良い教師かもわからない。
 学校は仕方ないけど、家庭教師やインストラクターのように教師を自分で選べるなら、教師を選べるようになってから始めた方がいい。
+
+「ストリートダンスじゃ高校生のインストラクターなんてザラだし、ぶっちゃけなろうと思ったらカボくんでもなれるよ。だって受けに来る初心者は「教えてる人が上手いかどうか」なんてわかんないでしょ？」『ワンダンス』
