--- a/games/Street-Fighter/Six/characters/Manon/攻め.md
+++ b/games/Street-Fighter/Six/characters/Manon/攻め.md
@@ -18,6 +18,12 @@
 ひたすらMPで固める。
 近かったらLPを挟んだ方がいい。
 
+- MP
+  - CR LP, ガード: 連続ガードで+3の投げ間合い、Dリバをガードできる、先端だと投げ間合いの外
+  - CR 2MP: 連続ガードの+3で投げ間合いの外
+  - CR 弱ドレ: MPがヒットしていると空振りするので遅らせる
+  - CR 通常投げ: 垂直ジャンプに対空狙い
+
 ## 弱ドレ
 
 MPの間合いで届く。
