--- a/games/Street-Fighter/Six/characters/Sagat/サガットの相性.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの相性.md
@@ -3,6 +3,13 @@
 開幕中ニーをガードすると有利を取られるので、見てからインパクトで返すか、垂直を置く。
 ただし、垂直は6HKで落とされるとだるい。まぁ、相手も狙うのは難しいはずなので飛んでもいい。
 
+## ダルシム
+
+4HPで対空を潰しやすいので積極的に飛んでもいい。
+HKも4HP早出しを盾にすると相打ちを狙える。
+
+上弾を浮遊や低空ドリルで抜けられない。積極的に上弾を撃つ。
+
 ## マリーザ
 
 OD上弾を重ねるとODスクトゥムも割れる。
