--- a/games/Street-Fighter/Six/characters/Sagat/サガットの相性.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの相性.md
@@ -1,3 +1,7 @@
+## 総評
+
+サガットは春麗やジェイミーみたいに上弾でも抜けてきて足が速いキャラは結構きつい。サガットの差し合いは長い技を当てていく形なので、足が速いと特に間合いがずれやすい。
+
 ## サガット（同キャラ）
 
 開幕中ニーをガードすると有利を取られるので、見てからインパクトで返すか、垂直を置く。
