--- a/games/Street-Fighter/Six/practice/守りの練習メニュー.md
+++ b/games/Street-Fighter/Six/practice/守りの練習メニュー.md
@@ -100,14 +100,15 @@ https://youtu.be/pRL-TWPgoSA?si=J9X8tH1P6iKqgnws
 端を背負った状況で投げにバクステして、弱攻撃がパニカンになるようにコンボする。
 できれば位置入れ替えか、相手を大きく吹っ飛ばすコンボを練習する。
 
-## ラッシュに割り込む練習
+## キャンセルラッシュに無敵技で割り込む練習
 
 以下をレコードする。
 
-- 垂直ジャンプ, DR 小パン, ガード
-- 垂直ジャンプ, 中足, CR 小パン, ガード: 連続ガードにする
-- 垂直ジャンプ, 中足, CR 中パン, ガード: 連続ガードにしない
+- 中足
+- 中足, CR 小パン: 連続ガードにする
+- 中足, CR 投げ: 連続ガードにしない
 
-自分はガードしておいて、ラッシュに無敵技を合わせる。
-連続ガードの時には漏れないようにする。
-DRには通常技で割り込めると尚良い。
+中足をガードして、ラッシュに無敵技で割り込む。
+連続ガードの場合は漏れないようにする。
+
+DR 小パンを混ぜて通常技で止める練習を混ぜてもいい。
