--- a/shared/government/democracy/選挙.md
+++ b/shared/government/democracy/選挙.md
@@ -15,3 +15,5 @@
 https://youtube.com/shorts/YSz02nghgWo?si=QizE-f-v5S4iW0Is
 
 現行の体制に不満がなければ投票率は下がるし、現職がそのまま当選しやすい。投票に行かなくても現職に投票するようなもの。
+
+民主党は政権交代した時代にも別に支持されているわけじゃなかった。消去法で自民党の票が流れただけ。その後のプランもなかった。
