--- a/shared/human/body/nerve/脳の性能を維持する.md
+++ b/shared/human/body/nerve/脳の性能を維持する.md
@@ -4,3 +4,6 @@
 
 簡単なタスクは手元に残さない。
 優先度が低くても、人間的にはさっさと済ませて忘れてしまったほうがパフォーマンスを上げやすい。
+
+4色に分かれた箱を持って、4色のボールを次々と同じ色の箱に入れる訓練。
+https://x.com/sg3lu/status/1964906541473321361?s=12
