--- a/study/economics/景気.md
+++ b/study/economics/景気.md
@@ -3,3 +3,9 @@
 
 景気が良いというのは消費が活発に行われることであって、企業の利益が大きいことではない。
 貯蓄を溜めこむばかりでは景気がいいとは言えない。
+
+景気が良いとは言っても全ての国民が存分に消費できるわけではないし、その必要もない。重要なのは政権や治安が安定するくらいの規模でそれが叶えられること。割合が大事。
+
+景気がいいというのは物価が上がることではない。国民がたくさん消費できることだ。たくさん消費するから物価が上がる。先に物価を上げてはいけない。とにかく物価を上げようとする自公みたいな経済音痴に経済を任せてはいけない。
+
+好景気はそれ以外の問題を隠す。良くも悪くも。
