--- a/shared/game/tips/恐怖を与える.md
+++ b/shared/game/tips/恐怖を与える.md
@@ -5,3 +5,5 @@
 
 ある種の「勝ちたさ」からリスクを冒すこともある。
 あまりにも考えなしだとリスクが高いばかりで実ることは少ないけど、うまく噛み合うと大きな勝ちを得られることもある。
+
+どれだけ策を尽くしても、最後には正々堂々と勝たなければ相手に恐怖を与えられない。まぁ、闇に隠れて圧倒するのも正々堂々ではある。正々堂々というのは力を示すということ。
