--- a/games/Pawapro/2024/選手の育成.md
+++ b/games/Pawapro/2024/選手の育成.md
@@ -1,3 +1,7 @@
+## 共通
+
+チームにムード⚪︎がいない場合、ムード⚪︎を優先して取る。
+
 ## ポジションごとの育成方針
 
 才能がないところから育てるなら、まずは走力と守備力が高い選手をセカンドとショートにコンバートして、肩力が高い選手をサードとキャッチャーにコンバートして、特に能力が低い選手をファーストにコンバートして、残りは外野で走らせる。なんならファーストとサードと外野はコンバートなしで守備力半分でもしばらくなんとかなる。
