--- a/shared/health/exercise/エクササイズ.md
+++ b/shared/health/exercise/エクササイズ.md
@@ -32,3 +32,5 @@ https://x.com/YuyaDiet40/status/1814969924487614657
 筋肉にも瞬発的な筋力と持続的な筋力（体力）がある。
 
 歩いてばかりじゃなくて、個別に筋トレもした方がいい。特に腕や胸。
+
+四股は筋トレとしても使える。
