--- a/shared/life/老い.md
+++ b/shared/life/老い.md
@@ -5,3 +5,5 @@
 その極致が老衰による死。反応が全くなくなる。
 
 年老いるほど感覚が鈍くなって反応が悪くなる。最後には全く反応しなくなって土に帰る。
+
+過去にどれだけ偉業を成し遂げた人でも、80-90超えたらもうただのボケたおじいちゃんおばあちゃんでしかない。期待するのは酷というもの。
