--- a/shared/story/fiction/settings/舞台設定.md
+++ b/shared/story/fiction/settings/舞台設定.md
@@ -17,3 +17,5 @@
 コルセットが流行ったのは近代なので中世風の世界で流行ってると違和感がある。
 
 『嘆きの亡霊』のように神の弱点が「神に従う」こと、という考えは面白かった。ルールに則って神に従うと、神からは手が出せなくなる。
+
+せっかく魔法の世界が舞台なら、魔法の世界ならではの処刑とか習慣とか見たい。地球の中世世界の焼き増しでしかないのはがっかりする。
