--- a/games/Street-Fighter/Six/characters/Rashid/ラシードの対策.md
+++ b/games/Street-Fighter/Six/characters/Rashid/ラシードの対策.md
@@ -57,3 +57,5 @@ SA2は後ろに下がって投げだけ見る。
 モダンラシードは特に下段の攻めが弱いので、基本的に立っていていい。
 ただ、ラッシュ小足からは結構伸ばせる。
 ラッシュにはパリィ。中下段を受ける。投げは諦める。
+
+ラシードは前に出るのがあまり強くない。大きく下がって前に歩かせるのは一つの対策。弾がないと難しいけど。
