--- a/games/Street-Fighter/Six/characters/Sagat/サガットの対策.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの対策.md
@@ -1,10 +1,3 @@
-差し合いはとにかくニーを見てから立つのが大事。しゃがむと+2取られる。
-
-サガット有利になる状況が結構あるので、割り込みポイントは覚えないといけない。
-割り込みポイントというよりは、立ったら確反、ということが多い。
-
-サガット対策はまず見てからインパクト。なんなら適当に置いても確定しやすい。
-
 ## ニー
 
 連携の締めにニーを混ぜてくる場合は立ちガードから確反を狙う。OD以外がめり込んだら5F以上はある。
@@ -19,3 +12,20 @@
 - 弱ショット
 - ニー
 - 2MP/2MP-HP/2HP, ネクサス
+
+## その他
+
+差し合いでは中パンの間合いの置きが強くないのでしっかり踏み込むのと中パンに差し返すのが大事。MKはガードしていい。
+バクステを置くのもいい。ニーやステローを避けて差し返しを狙う。
+
+DR 6LKをガードしたらMPで攻め継続狙いがちだけどコパンで割り込める。
+
+サガットは結局運ゲーキャラなので、こっちもリスクのある読み合い、特にインパクトを撃っていったほうがいい。
+
+差し合いはとにかくニーを見てから立つのが大事。しゃがむと+2取られる。
+ただし、ただ立っているだけだと6HKで+4取られる。基本はしゃがみ。
+
+サガット有利になる状況が結構あるので、割り込みポイントは覚えないといけない。
+割り込みポイントというよりは、立ったら確反、ということが多い。
+
+サガット対策はまず見てからインパクト。なんなら適当に置いても確定しやすい。
