--- a/shared/action/祈り.md
+++ b/shared/action/祈り.md
@@ -31,3 +31,6 @@
 
 植木鉢がひっくり返っても咲いていたシクラメン
 https://x.com/kansetsu_pokiri/status/1916066661444256112?s=12
+
+「何もしない」あるいは「祈る」のも立派な対案である。ただし、パフォーマンスは十分に考慮されなければならない。
+何もしないのが最善になるのは、それ以外の行動全てで状況が悪化する場合のみ。それ以外の行動全てを評価してからでないと判断できない。
