--- a/games/Street-Fighter/Six/theory/守りの基本.md
+++ b/games/Street-Fighter/Six/theory/守りの基本.md
@@ -202,3 +202,5 @@ DIを拒否するなら、ジャンプより投げ。もちろん割り込めな
 打撃とコマ投げの択には正面からぶつからないといけない。安易に安い無敵技で暴れるのは良くない。リスクリターンを合わせる。打撃に暴れるならSAで、投げには垂直を合わせる。リターンで負けない。
 
 長くて早い小パン中パンを持っているキャラは守りが強い。
+
+ラッシュにパリィを押すのは投げもあるのでよくない。まぁ、癖じゃなくて読み合いとして中段とか遅いラッシュを狙うのは無しではない。
