--- a/shared/collaboration/organization/hierarchy/上司.md
+++ b/shared/collaboration/organization/hierarchy/上司.md
@@ -93,3 +93,7 @@
 為政者や経営者は常に試されていることを自覚しなければならない。
 
 上司が答えを持っているかのように振る舞ってしまうと、当然部下は上司が答えを持っているものとして振る舞う。上司の負担はそれだけ重くなってしまう。上司が自分の負担を軽くしたかったら、答えは持ってないものとして振る舞うべき。むしろ答えを出すのは部下に任せて、問い続ける。
+
+より重要な情報を扱う中枢の人間ほど口は硬くないといけない。
+
+上司は別に尊くない。役割として命令系統の上流というだけ。
