--- a/shared/communication/channels/sex/性欲.md
+++ b/shared/communication/channels/sex/性欲.md
@@ -2,3 +2,5 @@
 
 女性が卵子などを月に一回入れ替えるのと同じように、男性も精子を週に一、二回入れ替えようとする。古い精子は遊泳能力が落ちて卵子に入りにくい。
 恋人がそれを受け止めきれないなら自慰や風俗で抜くとか、最悪浮気で抜くとかすることになる。
+
+女性だけに優しくて男性に優しくない人はヤリモクなので、性欲がなくなったら優しくなくなる。でも、死ぬまで一緒にいるつもりがないなら別にそれでもいい。
