--- a/shared/lifestyle/clothing/服.md
+++ b/shared/lifestyle/clothing/服.md
@@ -55,3 +55,5 @@
 
 湿度が低いけど日差しが熱いところは薄い布で肌を隠す。イタリアとか中東とか。
 対して日本みたいに湿度が高いところは薄着。肌を隠すとジメジメして暑いし。日差しが熱かったら日傘。
+
+服は結局洗濯するたびにほつれていくので、安いのをこまめに買い替えたほうが綺麗ではある。特に綿。コートとかほとんど洗濯しないものは別だけど。
