--- a/shared/security/情報漏洩.md
+++ b/shared/security/情報漏洩.md
@@ -1,3 +1,5 @@
 情報漏洩元を検知するために個人ごとの内容を少しずつ変えて情報を渡す方法がある。
 
 機密情報を伝える場合、内容を少しずつ変えて伝えると、漏れた場合にどこから漏れたかわかる。
+
+「口が硬い」というのはどちらかというと「話していいことを選べる」ということ。全く何も話さないのは現実的ではない。でも「話していいこと」は時代によっても違うので難しい。
