--- a/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
@@ -78,6 +78,7 @@ MP, MP, LP, CR 2LPだと4HPが届かない。
 ## MP(+2)
 
 - MP(+2), 4HP, 強ニー, 弱アッパー: 3210 34F
+- {端} MP(+2), 4HP, 中ショット, 6HK, 中アッパー: 3480
 - {中央} MP(+2), 4HP, 中ショット, DR(1F長め) 4HP, 強アッパー-h: 3860
 - {端} MP(+2), 4HP, (遅らせ)中ショット, DR 4HP, 強アッパー-h: 3860
 - MP(+2), 4HP, 強ニー, ODアッパー: 3560
@@ -100,6 +101,8 @@ MP, MP, LP, CR 2LPだと4HPが届かない。
 - MP(+4), HK, CR HK, 強ノヴァ, DR 4HP, 強アッパー-h, SA3: 5537
 
 DリバはMP(+2), 4HPが届かないのでこっち。単純に伸ばしやすいのもこっち。
+
+DR MP, 4HP, 中ショットのルートがpcとDRで違うので分けたほうがいいかも。
 
 ## HP
 
@@ -215,8 +218,28 @@ HK(1), 強ノヴァは相手が空中でも使える。
 
 - 2HP, 強アッパー: 2400
 - 2HP, 強ニー: 2200
+- 2HP, ODノヴァ, 強アッパー: 2900
 - {端} 2HP, ODノヴァ, 4HP, 強アッパー-h: 3700
+- 2HP, ODノヴァ, DR 4HP, 強アッパー-h: 3524
+- 2HP, ODノヴァ, DR 2MP-HP, 強ニー: 2974 42F
+- 2HP, ODノヴァ, 6HK, SA1: 3470
+- 2HP, ODノヴァ, 6HK, SA2: 3827 (2:3695)
+- {端} 2HP, ODノヴァ, 4HP, 強ニー, SA2: 3950 (2:3830)
+- 2HP, ODノヴァ, 強アッパー, SA3: 4900
+- {端} 2HP, ODノヴァ, 4HP, 強ニー, 中アッパー, SA3: 5310
+- 2HP, ODノヴァ, DR 2HP, CR HK, 強ニー, 弱アッパー, SA3: 5443
+
+ODネクサス（ノヴァ）ルートはゲージ回収率もいい。
+
+## {端} 2HP, OD上ショット
+
 - {端} 2HP, OD上ショット, 6HK, 中アッパー: 3200
+- {端} 2HP, OD上ショット, DR 4HP, 強アッパー-h: 3700
+- {端} 2HP, OD上ショット, DR HK, CR 4HP, 強アッパー-h: 3915
+- {端} 2HP, OD上ショット, 6HK, 中アッパー, SA3: 5200
+- {端} 2HP, OD上ショット, DR HK, CR 4HP, 強アッパー-h: 5495
+
+ガードされても状況がいい。インパクトも割れる。
 
 ## 2HP(pc)
 
